--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                             <li class="header__countingList"><span class="header__countingNumbers" id="Days"></span>Days</li>
                             <li class="header__countingList"><span class="header__countingNumbers" id="Hours"></span>Hours</li>
                             <li class="header__countingList"><span class="header__countingNumbers" id="Minutes"></span>Minutes</li>
-                            <li class="header__countingList"><span class="header__countingNumbers" id="Seconds"></span>Seconds</li>
+                            <li class="header__countingList heading__down"><span class="header__countingNumbers" id="Seconds"></span>Seconds</li>
                         </ul>
                     </div>
                 </div>
