--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
             <div class="header__box">
                 <div class="header__text">
                     <h2 class="header__main"><span class="header__primary">Onubia</span> is
-                        <span class="header__span" data-period="2000" data-rotate='["Launching Soon", "coming soon", "Africa #1 Marketplace"]'></span>
+                        <span class="header__span" data-period="2000" data-rotate='["Launching Soon", "coming soon", "will be back"]'></span>
                     </h2>
                     <p class="header__info">Our exciting new website is coming soon! Check back later...</p>
                 </div>
