--- a/index.html
+++ b/index.html
@@ -28,13 +28,13 @@
                 <div class="header__logo">
                     <a href="#"><img src="./image/bg-1.png" alt="" class="header__log"></a>
                 </div>
-                <div class="header__menu" id="header__menu"><i class='bx bx-menu-alt-right'></i></div>
+                <div class="header__menu" id="header__menu"><i class='bx bx-menu'></i></div>
             </nav>
 
             <div class="header__box">
                 <div class="header__text">
                     <h2 class="header__main"><span class="header__primary">Onubia</span> is
-                        <span class="header__span" data-period="2000" data-rotate='["Launching Soon", "coming soon", "will be back"]'></span>
+                        <span class="header__span" data-period="2000" data-rotate='["Launching Soon", "coming soon"]'></span>
                     </h2>
                     <p class="header__info">Our exciting new website is coming soon! Check back later...</p>
                 </div>
@@ -130,6 +130,8 @@
         </div>
         <a href="#home"><div class="redirect"><i class='bx bx-up-arrow-alt'></i></div></a>
     </footer>
+    <!--========== SCROLL REVEAL ==========-->
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script src="./script/main.js"></script>
 </body>
 </html>
