--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <div class="header__overlay">
             <nav class="header__navigation" id="header__navigation">
                 <div class="header__logo">
-                    <a href="#"><img src="./image/bg-1.png" alt="" class="header__log"></a>
+                    <a href="#"><img src="./image/onubia.png" alt="" class="header__log"></a>
                 </div>
                 <div class="header__menu" id="header__menu"><i class='bx bx-menu'></i></div>
             </nav>
@@ -63,35 +63,52 @@
             <div class="about__textBox">
                 <p class="about__sub">What we do</p>
                 <h2 class="about__main">
-                    Africa Online Marketplace
+                    An online Marketplace and More
                 </h2>
                 <span class="about__line"></span>
                 <p class="about__description">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Sed nulla neque tempore rerum dolore accusamus, 
-                    eum, officia nostrum sequi explicabo aspernatur asperiores.
+                    With Onubia, African brands and businesses will be able to sell top quality products to its immediate African community and the global market.
+                    We are more than just a marketplace, Onubia is the all-in-one E-commerce partner for African brand and Businesses.
                 </p>
             </div>
 
             <div class="about__box">
                 <div class="about__grid">
-                    <div class="about__iconBox"><i class='bx bxs-truck'></i></div>
-                    <h2 class="about__title">Fast Delivery</h2>
+                    <div class="about__iconBox"><i class='bx bxs-business'></i></div>
+                    <h2 class="about__title">Business Branding</h2>
                     <p class="about__info">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores incidunt laboriosam harum, voluptatem fugiat perspiciatis.
+                        Onubia would be branding promising unbranded businesses, helping craftsmen and women 
+                        with noteworthy skills become recognized brands locally and globally. This would not only 
+                        increase the number of local brands in the African market and increase 
+                        the earning potential of locals, but it would also drastically reduce the rate of piracy of foreign brands in Africa.
                     </p>
                 </div>
                 <div class="about__grid">
-                    <div class="about__iconBox"><i class='bx bx-transfer'></i></div>
-                    <h2 class="about__title">Buy & Sell</h2>
+                    <div class="about__iconBox"><i class='bx bxs-analyse'></i></div>
+                    <h2 class="about__title">Flipping the narrative</h2>
                     <p class="about__info">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores incidunt laboriosam harum, voluptatem fugiat perspiciatis.
+                        We want to flip the popular narrative that African brands and products are inferior to their foreign 
+                        counterparts by selling only the very best of African products. we look to increase the popularity of i
+                        ndigenous brands that produce quality products, thereby gradually changing 
+                        the popular consensus that African brands and products are inferior to their foreign counterparts.
                     </p>
                 </div>
                 <div class="about__grid">
-                    <div class="about__iconBox"><i class='bx bx-support'></i></div>
-                    <h2 class="about__title">Customer Support</h2>
+                    <div class="about__iconBox"><i class='bx bxs-shopping-bags'></i></div>
+                    <h2 class="about__title">Onubia Shop</h2>
                     <p class="about__info">
-                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Maiores incidunt laboriosam harum, voluptatem fugiat perspiciatis.
+                        Onubia.shop online marketplace will provide indigenous brands the resources they need to 
+                        sell top quality products  both locally and internationally. We not only provide them with 
+                        an online platform to sell their products to both local and international 
+                        clients but also help run ad campaigns to improve their public perception and popularity.
+                    </p>
+                </div>
+                <div class="about__grid">
+                    <div class="about__iconBox"><i class='bx bxl-bitcoin' ></i></div>
+                    <h2 class="about__title">Cryptocurrencies</h2>
+                    <p class="about__info">
+                        The Onubia marketplace is also a crypto/digital assets friendly marketplace. On launch shoppers will be able to make 
+                        seamless payments for purchases using their favorite Crypto/digital assets
                     </p>
                 </div>
             </div>
