--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./css/query.css">
     <link href='https://unpkg.com/boxicons@2.0.9/css/boxicons.min.css' rel='stylesheet'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -43,18 +44,10 @@
                 <div class="header__counter">
                     <div class="header__count" id="countdown">
                         <ul class="header__countingItems">
-                            <div class="header__grid">
-                                <li class="header__countingList"><span class="header__countingNumbers" id="Days"></span>Days</li>
-                            </div>
-                            <div class="header__grid">
-                                <li class="header__countingList"><span class="header__countingNumbers" id="Hours"></span>Hours</li>
-                            </div>
-                            <div class="header__grid">
-                                <li class="header__countingList"><span class="header__countingNumbers" id="Minutes"></span>Minutes</li>
-                            </div>
-                            <div class="header__grid heading__down">
-                                <li class="header__countingList"><span class="header__countingNumbers" id="Seconds"></span>Seconds</li>
-                            </div>
+                            <li class="header__countingList"><span class="header__countingNumbers" id="Days"></span>Days</li>
+                            <li class="header__countingList"><span class="header__countingNumbers" id="Hours"></span>Hours</li>
+                            <li class="header__countingList"><span class="header__countingNumbers" id="Minutes"></span>Minutes</li>
+                            <li class="header__countingList header__down"><span class="header__countingNumbers" id="Seconds"></span>Seconds</li>
                         </ul>
                     </div>
                 </div>
